--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ layout: default
         </p>
       <h3>Tools</h3>
         <p>
-          VS Code, git, ChatGPT, Singularity
+          VS Code, git, Singularity
         </p>
     </div>
 
