--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ layout: default
   <div id="all_posts">
 
 
-    <div id="Publications/Preprents">
-      <h2> Publications/Preprents </h2>
+    <div id="Publications/Preprints">
+      <h2> Publications/Preprints </h2>
+      <p>*corresponding author; †equal contribution; ‡equal last author </p>
       {% for post in site.posts %}
       {% if post.category == "publication" or post.category == "preprint" %}
         <div class="print_block">
@@ -118,9 +119,12 @@ layout: default
   <h2> Experience </h2>
     <div class="exp_block">  
       <h3>Research Internship</h3>
-        <p>will be uploaded ...</p>
+        <p>2024 Feb</p>
+        <a href="https://www.rd.ntt/">
+          NTT R&D</a><br />
+          Investigation on neural oscillations (EEG) and visual attention during esports<br />
       <h3>Summer School</h3>
-        <p>2023 September (1month)</p>
+        <p>2023 Sep</p>
         <a href="https://deeplearning.jp/llm2023/">
           Summer School 2023 Large Language Model</a>
     </div>
