--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
       <h2> Publications/Preprints </h2>
       <p>*corresponding author; †equal contribution; ‡equal last author </p>
       {% for post in site.posts %}
-      {% if post.category == "publication" or post.category == "preprint" %}
+      {% if post.category == "print" %}
         <div class="print_block">
           <h3>{{ post.title }}</h3>
           <span><strong>{{ post.date | date_to_string }}</strong> - {{ post.tags | array_to_sentence_string }}</span>
