--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 
     <div id="Publications/Preprints">
       <h2> Publications/Preprints </h2>
-      <p>*corresponding author; †equal contribution; ‡equal last author </p>
+      <!-- <p>*corresponding author; †equal contribution; ‡equal last author </p> -->
       {% for post in site.posts %}
       {% if post.category == "print" %}
         <div class="print_block">
