--- a/index.html
+++ b/index.html
@@ -118,15 +118,14 @@ layout: default
 
   <h2> Experience </h2>
     <div class="exp_block">  
-      <h3>Research Internship</h3>
-        <p>2024 Feb</p>
-        <a href="https://www.rd.ntt/">
-          NTT R&D</a><br />
-          Investigation on neural oscillations (EEG) and visual attention during esports<br />
-      <h3>Summer School</h3>
-        <p>2023 Sep</p>
-        <a href="https://deeplearning.jp/llm2023/">
-          Summer School 2023 Large Language Model</a>
+      <p>2024 Feb  Research Internship</p>
+      <a href="https://www.rd.ntt/">
+        NTT R&D</a><br />
+        Investigation on neural oscillations (EEG) and visual attention during esports<br />
+      <p>2023 Sep  Summer School</p>
+      <a href="https://weblab.t.u-tokyo.ac.jp/">
+        Matsuo-Iwasawa Lab, University of Tokyo</a><br />
+        Large Language Model course 2023<br />
     </div>
 
   <h2> Skills </h2>
