--- a/index.html
+++ b/index.html
@@ -118,14 +118,16 @@ layout: default
 
   <h2> Experience </h2>
     <div class="exp_block">  
-      <p>2024 Feb  Research Internship</p>
-      <a href="https://www.rd.ntt/">
+      <p><i>2024 February</i><br />
+      Research Internship in <a href="https://www.rd.ntt/">
         NTT R&D</a><br />
-        Investigation on neural oscillations (EEG) and visual attention during esports<br />
-      <p>2023 Sep  Summer School</p>
-      <a href="https://weblab.t.u-tokyo.ac.jp/">
+      Investigation on neural oscillations (EEG) and visual attention during esports
+      </p>
+      <p><i>2023 September</i><br />
+      Summer School by <a href="https://weblab.t.u-tokyo.ac.jp/">
         Matsuo-Iwasawa Lab, University of Tokyo</a><br />
-        Large Language Model course 2023<br />
+      Large Language Model course 2023
+      </p>
     </div>
 
   <h2> Skills </h2>
