add_award_nlp2025

--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@ layout: default
       </p>
     </div>
 
+  <h2> Awards </h2>
+    <div class="awards_block">
+      <b>NLP2025 Annual Conference Student Incentive Award</b><br />
+        <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a>,<br />
+        Nagasaki, Japan, 13 March, 2025<br />
+    </div>
+
   <h2> Skills </h2>
     <div class="skill_block">
       <h3>Programing Languages</h3>
