--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 
     <div id="Publications/Preprints">
       <h2> Publications/Preprints </h2>
-      <p>*corresponding author; †equal contribution; ‡equal last author </p>
+      <p>*corresponding author; †equal contribution; ‡equal last author; §Team lead</p>
       {% for post in site.posts %}
       {% if post.category == "print" %}
         <div class="print_block">
@@ -132,7 +132,7 @@ layout: default
 
   <h2> Awards </h2>
     <div class="awards_block">
-      <b>NLP2025 Annual Conference Student Incentive Award</b><br />
+      <b>NLP2025 Student Incentive Award</b><br />
         <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a>,<br />
         Nagasaki, Japan, 13 March, 2025<br />
     </div>
