--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
       {% for post in site.posts %}
       {% if post.category == "print" %}
         <div class="print_block">
-          <h3>{{ post.title }}</h3>
+          <!-- <h3>{{ post.title }}</h3> -->
           <!-- <span><strong>{{ post.date | date_to_string }}</strong> - {{ post.tags | array_to_sentence_string }}</span> -->
           {% if post.description %} 
             <p> {{ post.description }} </p>
@@ -74,11 +74,11 @@ layout: default
     </div>
 
     <div id="conferences">
-      <h2> Conferences </h2>
+      <h2> Conferences (not peer reviewed)</h2>
       {% for post in site.posts %}
       {% if post.category == "conference" %}
         <div class="conf_block">
-          <h3>{{ post.title }}</h3>
+          <!-- <h3>{{ post.title }}</h3> -->
           <!-- <span><strong>{{ post.date | date_to_string }}</strong> - {{ post.tags | array_to_sentence_string }}</span> -->
           {% if post.description %} 
             <p> {{ post.description }} </p>
@@ -103,7 +103,8 @@ layout: default
         <b>Osaka University</b><br />
         Graduate School of Frontier Biosciences <br />
         Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          Shinji Nishimoto</a>
+          Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
+            Yu Takagi</a>
       </p>
   
       <p><i>2019 April - 2023 March </i><br />
@@ -112,12 +113,18 @@ layout: default
         Department of Systems Science, <br />
         School of Engineering Science, <br />
         Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          Shinji Nishimoto</a>
+          Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
+            Yu Takagi</a>
       </p>
     </div>
 
   <h2> Experience </h2>
     <div class="exp_block">  
+      <p><i>2024 September - 2025 February</i><br />
+        Research Assistant in <a href="https://llmc.nii.ac.jp/">
+          LLMC, National Institute of Technology (NII)</a><br />
+        Investigation on neural oscillations (EEG) and visual attention during esports
+        </p>
       <p><i>2024 February</i><br />
       Research Internship in <a href="https://www.rd.ntt/">
         NTT R&D</a><br />
