--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ layout: default
   
   <h2> Education </h2>
     <div class="edu_block">
-      <p><i>2023 April - </i><br />
+      <p><i>2023 April - 2025 March</i><br />
         <b>Osaka University</b><br />
         Graduate School of Frontier Biosciences <br />
         Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
