--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
   <div id="all_posts">
 
 
-    <div id="Publications/Preprints">
+    <div id="papers">
       <h2> Publications/Preprints </h2>
       <p>*corresponding author; †equal contribution; ‡equal last author; §Team lead</p>
       {% for post in site.posts %}
