--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 
     <div id="papers">
       <h2> Publications/Preprints </h2>
-      <p>*corresponding author; †equal contribution; ‡equal last author; §Team lead</p>
+      <p>*corresponding author; †equal contribution; ‡equal last author; §team lead</p>
       {% for post in site.posts %}
       {% if post.category == "print" %}
         <div class="print_block">
