誤字の修正

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ layout: default
     <div class="exp_block">  
       <p><i>2024 July - 2025 February</i><br />
         Research Assistant in <a href="https://llmc.nii.ac.jp/">
-          LLMC, National Institute of Technology (NII)</a>        
+          LLMC, National Institute of Informatics (NII)</a>        
         </p>
       <p><i>2023 April - 2025 March</i><br />
         Collaborating Researcher in <a href="https://www.cinet.jp/english/">
