--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<div id="lang-banner">
+  <select id="lang-select">
+    <option value="ja">日本語</option>
+    <option value="en">English</option>
+  </select>
+</div>
+
 <div>
 
   <p>{{ site.long_description }}</p>
