--- a/ja/index.html
+++ b/ja/index.html
@@ -105,61 +105,59 @@ layout: default
 
   <h2> Awards </h2>
   <div class="awards_block">
-    <b>NLP2025 Student Incentive Award</b><br />
+    <b>NLP2025 若手奨励賞</b><br />
       <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a>,<br />
-      Nagasaki, Japan, 13 March, 2025<br />
+      長崎, 日本, 2025年3月13日<br />
   </div>
   
   <h2> Education </h2>
     <div class="edu_block">
-      <p><i>2023 April - 2025 March</i><br />
-        <b>Osaka University</b><br />
-        Graduate School of Frontier Biosciences <br />
-        Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
-            Yu Takagi</a>
+      <p><i>2023年4月 - 2025年3月</i><br />
+        <b>大阪大学</b><br />
+        大学院 生命機能研究科 <br />
+        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
+          西本伸志</a>、 <a href="https://yu-takagi.github.io/">
+            高木優</a>
       </p>
   
-      <p><i>2019 April - 2023 March </i><br />
-        <b>Osaka University</b><br />
-        Division of Biophysical Engineering, <br />
-        Department of Systems Science, <br />
-        School of Engineering Science, <br />
-        Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
-            Yu Takagi</a>
+      <p><i>2019年4月 - 2023年3月 </i><br />
+        <b>大阪大学</b><br />
+        基礎工学部 システム科学科 生物工学コース <br />
+        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
+          西本伸志</a>、 <a href="https://yu-takagi.github.io/">
+            高木優</a>
       </p>
     </div>
 
   <h2> Experience </h2>
     <div class="exp_block">  
-      <p><i>2024 July - 2025 February</i><br />
-        Research Assistant in <a href="https://llmc.nii.ac.jp/">
-          LLMC, National Institute of Informatics (NII)</a>        
+      <p><i>2024年7月 - 2025年2月</i><br />
+        リサーチアシスタント <br /> <a href="https://llmc.nii.ac.jp/">
+          国立情報学研究所 大規模言語モデル研究開発センター (NII LLMC)</a>     
         </p>
-      <p><i>2023 April - 2025 March</i><br />
-        Collaborating Researcher in <a href="https://www.cinet.jp/english/">
-          CiNet, National Institute of Information and Communications Technology (NICT)</a>        
+      <p><i>2023年4月 - 2025年3月</i><br />
+        協力研究員 <br /> <a href="https://www.cinet.jp/english/">
+          情報通信研究機構 脳情報通信融合研究センター (CiNet NICT)</a>        
         </p>
-      <p><i>2024 February</i><br />
-      Research Internship in <a href="https://www.rd.ntt/">
-        NTT R&D</a><br />
-      Investigation on neural oscillations (EEG) and visual attention during esports
+      <p><i>2024年2月</i><br />
+        研究インターンシップ <br /> <a href="https://www.rd.ntt/">
+          NTT コミュニケーション科学基礎研究所</a><br />
+          Investigation on neural oscillations (EEG) and visual attention during esports
       </p>
-      <p><i>2023 September</i><br />
-      Summer School by <a href="https://weblab.t.u-tokyo.ac.jp/">
-        Matsuo-Iwasawa Lab, University of Tokyo</a><br />
-      Large Language Model course 2023
+      <p><i>2023年9月</i><br />
+        サマースクール <a href="https://weblab.t.u-tokyo.ac.jp/">
+        東京大学 松尾・岩澤研究室</a><br />
+        大規模言語モデル講座 2023
       </p>
     </div>
 
-  <h2> Skills </h2>
+  <h2> スキル </h2>
     <div class="skill_block">
-      <h3>Programing Languages</h3>
+      <h3>プログラミング言語</h3>
         <p>
           Python, MATLAB, C, R
         </p>
-      <h3>Tools</h3>
+      <h3>ツール</h3>
         <p>
           VS Code, git, Singularity
         </p>
