--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 
 <div>
 
-  <p>{{ site.long_description }}</p>
+  <p>{{ site.long_description_en }}</p>
 
   {% comment %} 
   Get tags from all posts
@@ -105,9 +105,13 @@ layout: default
 
   <h2> Awards </h2>
   <div class="awards_block">
-    <b>NLP2025 Student Incentive Award</b><br />
+    <b>Student Incentive Award</b><br />
       <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a>,<br />
-      Nagasaki, Japan, 13 March, 2025<br />
+      Nagasaki, Japan, 13 March, 2025<br /><br />
+
+    <b>Best Presentation Award</b><br />
+      2024 Graduate School of Frontier Biosciences Interim Examination Presentation (Master's Thesis Presentation) <br />
+      Osaka, Japan, 25 March, 2025<br /><br />
   </div>
   
   <h2> Education </h2>
@@ -143,7 +147,7 @@ layout: default
         </p>
       <p><i>2024 February</i><br />
       Research Internship in <a href="https://www.rd.ntt/">
-        NTT R&D</a><br />
+        NTT Communication Science Laboratories</a><br />
       Investigation on neural oscillations (EEG) and visual attention during esports
       </p>
       <p><i>2023 September</i><br />
