--- a/ja/index.html
+++ b/ja/index.html
@@ -104,7 +104,7 @@ layout: default
   </div> -->
 
   <h2> Publications/Preprints </h2>
-    <div  class="print_block">
+    <div  id="papers">
       <p>
         *corresponding author; †equal contribution; ‡equal last author; §team lead<br />
         
@@ -120,7 +120,7 @@ layout: default
     </div>
 
   <h2> Conferences (not peer reviewed)</h2>
-    <div class="conf_block">
+    <div id="conferences">
       <p>
         <u>中木 裕子†§</u>, 多田 圭吾†, 吉野 草太†, 西本 伸志*‡, 高木 優*‡<br />
         <b><a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/E10-5.pdf">Triple-Phase Transition: 脳との関係から捉える大規模言語モデルの学習ダイナミクス</a></b><br />
@@ -152,17 +152,15 @@ layout: default
       <p><i>2023年4月 - 2025年3月</i><br />
         <b>大阪大学</b><br />
         大学院 生命機能研究科 <br />
-        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          西本伸志</a>、 <a href="https://yu-takagi.github.io/">
-            高木優</a>
+        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ"> 西本伸志</a>、 
+        <a href="https://yu-takagi.github.io/"> 高木優</a>
       </p>
   
       <p><i>2019年4月 - 2023年3月 </i><br />
         <b>大阪大学</b><br />
         基礎工学部 システム科学科 生物工学コース <br />
-        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-          西本伸志</a>、 <a href="https://yu-takagi.github.io/">
-            高木優</a>
+        指導者: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ"> 西本伸志</a>、 
+        <a href="https://yu-takagi.github.io/"> 高木優</a>
       </p>
     </div>
 
