--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@ layout: default
 
 <div>
 
-  <p>{{ site.long_description_en }}</p>
+  <p>{{ site.long_description_en }}<br /></p>
 
   {% comment %} 
   Get tags from all posts
