--- a/ja/index.html
+++ b/ja/index.html
@@ -11,7 +11,7 @@ layout: default
 
 <div>
 
-  <p>{{ site.long_description_ja }}</p>
+  <p>{{ site.long_description_ja }}<br /></p>
 
   {% comment %} 
   Get tags from all posts
