--- a/en/index.html
+++ b/en/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-
+<html lang="en"></html>
 <div id="lang-banner">
   <select id="lang-select">
-    <option value="ja">Japanese</option>
     <option value="en">English</option>
+    <option value="ja">Japanese</option>
   </select>
 </div>
 
