--- a/ja/index.html
+++ b/ja/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-
+<html lang="ja"></html>
 <div id="lang-banner">
   <select id="lang-select">
-    <option value="ja">Japanese</option>
     <option value="en">English</option>
+    <option value="ja">Japanese</option>
   </select>
 </div>
 
@@ -106,7 +106,7 @@ layout: default
   <h2> Publications/Preprints </h2>
     <div  id="papers">
       <p>
-        *corresponding author; †equal contribution; ‡equal last author; §team lead<br />
+        <p>*corresponding author; †equal contribution; ‡equal last author; §team lead</p>
         
         <u>Yuko Nakagi†§</u>, Keigo Tada†, Sota Yoshino†, Shinji Nishimoto*‡, Yu Takagi*‡<br />
         <b><a href="https://www.arxiv.org/abs/2502.20779">Triple Phase Transitions: Understanding the Learning Dynamics of Large Language Models from a Neuroscience Perspective</a></b><br />
