--- a/en/index.html
+++ b/en/index.html
@@ -3,10 +3,8 @@ layout: default
 ---
 <html lang="en"></html>
 <div id="lang-banner">
-  <select id="lang-select">
-    <option value="en">English</option>
-    <option value="ja">Japanese</option>
-  </select>
+  <button id="lang-en" class="lang-switch">English</button> /
+  <button id="lang-ja" class="lang-switch">Japanese</button>
 </div>
 
 <div>
