--- a/ja/index.html
+++ b/ja/index.html
@@ -3,8 +3,9 @@ layout: default
 ---
 <html lang="ja"></html>
 <div id="lang-banner">
-  <button id="lang-en" class="lang-switch">English</button> /
-  <button id="lang-ja" class="lang-switch">Japanese</button>
+  <button id="lang-en" class="lang-switch">EN</button>
+  <span class="lang-divider">/</span>
+  <button id="lang-ja" class="lang-switch">JA</button>
 </div>
 
 <div>
