--- a/en/index.html
+++ b/en/index.html
@@ -3,9 +3,11 @@ layout: default
 ---
 <html lang="en"></html>
 <div id="lang-banner">
-  <button id="lang-en" class="lang-switch">English</button> /
-  <button id="lang-ja" class="lang-switch">Japanese</button>
+  <button id="lang-en" class="lang-switch">EN</button>
+  <span class="lang-divider">/</span>
+  <button id="lang-ja" class="lang-switch">JA</button>
 </div>
+
 
 <div>
 
