--- a/index.html
+++ b/index.html
@@ -105,13 +105,21 @@ layout: default
   <div class="awards_block">
   <h2> Awards </h2>
     <b>Student Incentive Award</b><br />
-      <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a>,<br />
+      <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a><br />
       Nagasaki, Japan, 13 March, 2025<br /><br />
 
     <b>Best Presentation Award</b><br />
       2024 Graduate School of Frontier Biosciences Interim Examination Presentation (Master's Thesis Presentation) <br />
       Osaka, Japan, 25 March, 2025<br /><br />
   </div>
+
+  <div class="car_block">
+  <h2> Careers </h2>
+    <p><i>2025 April - </i><br />
+      <b>NTT Communication Science Laboratories</b><br />
+      Interaction Research Group,<br />
+      Innovative Communication Laboratory<br />
+    </p>
   
   <div class="edu_block">
   <h2> Education </h2>
