--- a/ja/index.html
+++ b/ja/index.html
@@ -145,6 +145,14 @@ layout: default
       2024年度生命機能研究科 中間評価論文公聴会<br />
       大阪, 日本, 2025年3月25日<br /><br />
   </div>
+
+  <div class="car_block">
+  <h2> Careers </h2>
+    <p><i>2025年4月 - </i><br />
+      <b>NTT コミュニケーション科学基礎研究所</b><br />
+      協創情報研究部<br />
+      実世界インタラクション研究グループ<br />
+    </p>
   
   <div class="edu_block">
   <h2> Education </h2>
