--- a/ja/index.html
+++ b/ja/index.html
@@ -150,8 +150,7 @@ layout: default
   <h2> Careers </h2>
     <p><i>2025年4月 - </i><br />
       <b>NTT コミュニケーション科学基礎研究所</b><br />
-      協創情報研究部<br />
-      実世界インタラクション研究グループ<br />
+      協創情報研究部 実世界インタラクション研究グループ<br />
     </p>
   
   <div class="edu_block">
