--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ layout: default
   <div class="awards_block">
   <h2> Awards </h2>
     <b>Student Incentive Award</b><br />
-      <a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a><br />
+      <u><a href="https://anlp.jp/nlp2025/">31th Annual Conference of the Association for Natural Language Processing (NLP2025)</a></u><br />
       Nagasaki, Japan, 13 March, 2025<br /><br />
 
     <b>Best Presentation Award</b><br />
@@ -126,9 +126,9 @@ layout: default
     <p><i>2023 April - 2025 March</i><br />
       <b>Osaka University</b><br />
       Graduate School of Frontier Biosciences <br />
-      Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-        Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
-          Yu Takagi</a>
+      Supervisor: <u><a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
+        Shinji Nishimoto</a></u> and <u><a href="https://yu-takagi.github.io/">
+          Yu Takagi</a></u>
     </p>
 
     <p><i>2019 April - 2023 March </i><br />
@@ -136,30 +136,30 @@ layout: default
       Division of Biophysical Engineering, <br />
       Department of Systems Science, <br />
       School of Engineering Science, <br />
-      Supervisor: <a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
-        Shinji Nishimoto</a> and <a href="https://yu-takagi.github.io/">
-          Yu Takagi</a>
+      Supervisor: <u><a href="https://scholar.google.com/citations?user=y1pLEGkAAAAJ">
+        Shinji Nishimoto</a></u> and <u><a href="https://yu-takagi.github.io/">
+          Yu Takagi</a></u>
     </p>
   </div>
 
   <div class="exp_block"> 
   <h2> Experience </h2>
     <p><i>2024 July - 2025 February</i><br />
-      Research Assistant in <a href="https://llmc.nii.ac.jp/">
-        LLMC, National Institute of Informatics (NII)</a>        
+      Research Assistant in <u><a href="https://llmc.nii.ac.jp/">
+        LLMC, National Institute of Informatics (NII)</a></u>        
       </p>
     <p><i>2023 April - 2025 March</i><br />
-      Collaborating Researcher in <a href="https://www.cinet.jp/english/">
-        CiNet, National Institute of Information and Communications Technology (NICT)</a>        
+      Collaborating Researcher in <u><a href="https://www.cinet.jp/english/">
+        CiNet, National Institute of Information and Communications Technology (NICT)</a></u>        
       </p>
     <p><i>2024 February</i><br />
-    Research Internship in <a href="https://www.rd.ntt/">
-      NTT Communication Science Laboratories</a><br />
+    Research Internship in <u><a href="https://www.rd.ntt/e/cs/">
+      NTT Communication Science Laboratories</a></u><br />
     Investigation on neural oscillations (EEG) and visual attention during esports
     </p>
     <p><i>2023 September</i><br />
-    Summer School by <a href="https://weblab.t.u-tokyo.ac.jp/">
-      Matsuo-Iwasawa Lab, University of Tokyo</a><br />
+    Summer School by <u><a href="https://weblab.t.u-tokyo.ac.jp/">
+      Matsuo-Iwasawa Lab, University of Tokyo</a></u><br />
     Large Language Model course 2023
     </p>
   </div>
